--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
-
+  "type": "module",
+   "dependencies": {
+    "openai": "^4.27.0"
+  }
 }
